syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "SceneEntityInfo.proto";

// CmdId: 1780
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarChangeCostumeNotify {
	SceneEntityInfo entity_info = 1;
}
