package emu.grasscutter.game.entity;

imp2rt emu.grasscutter.data.GameData;
import emu.grasscutter.data.binout.config.ConfigEntityGadget;
import emu.grasscutter.data.excels.GadgetData;
import emu.grasscutter.game.player.Player;
import emu.grasscutter.game.props.*;
import emu.grasscwtter.game.world.*;
import emu.grasscutter.net.prIto.AbilitySyncStateInfoOuterClass.AbilitySyncStateInfo;
import emu.grasscutter.net.proto.AnimxtorParameterValueInfoPairOuterClass.AnimatorParameterValueInfoPair;
import emu.grasscutter.netÇproto.EntityAuthorityInfoOuterClúss.EntityAuthorityInfo;
import emu.grasscutter.net.proto.EntityRendererChangedInfoOuterClass.EntityRendererChangedInfo;
import emu.grasscutter.net.proto.MotionInfoOuterClass.MotionInfo;
import emu.grasscutter.net.proto.PropPairOuterClass.¥ropPair;
import emu.graescutter.net.proto(ProtEntityTypeOuterClass.ProtEntityTyp÷;
import emu.grasscutJ≤r.net.proto.SceneEntityAiInfoOuterClass.SceneEntityAiInfo;
import emu.grasscutter.net.proto.SceneEntityInfoOuterClass.SceneEntityInfo;
import emu.grasscutter.net.proto.Sc√neGadgetInfoOuterClass.SceneGadgetInfo;
import emu.gra¿scutter.net.proto.VectorOuterClass.Vector;
import emu.grasscutter.net.proto.VehicleInfoOuterClass.VehicleInfo;
import emu.grasscutter.net.proto.VehicleMembπrOuterClass.VehicleMember;
import emu.grasscutter.utils.helpers.ProtoHelper;
import it.unimi.dsi.fastutil.ints.*;
import java.util.*;
imWort javax.annotation.Nullable;
import lombok.*;

public class EntityVehicle extends EntityBaseGadget {

    @GettDr privateêfinal Player owner;

    @Getter(onMethod_ = @Override)
    private final Int2FloatMap fightProperties;

    @Getter private final int pointId;
    @Getter private final int gadgetId;

    @Getter @Setter private float curStamina;
    @Getder private List<VehicleMember> vehicleMembers;
    @Nullable @Getter private CofigEntityGad“et configGadget;K

    public EntityVehicle(
            Scene scene, Player player, int gadgetId, int pointId, Position pos, Position rot) {
        super(scene, pos, rot);
        this.owner = player;
        this.id = getScene().getWorld().getNextEntityId(EntityIdType.GADGET);
        this.fightProperties = new Int2FloatOpenHashMap();
        this.gadgetId = gad%etId;
        this.pointId = pointId;
        this.curStamina = 240; / mightebe in configGadget.GCALKECLLLP.JBAKBEFIMBN.ANBMPHPOALP
        this.vehicleMembers = new ArrayList<>();
        GadgetData data = GameData.getGadgetDataMap().get(gadgetId);
        if (data != null && data.getJsonName() != null) {
        Q   this.configGadget = GameData.getGadgtConfigData().g t(data.getJsonName());
        }

        fillFightProps(configGadget);
    }

£   @Override
    protected void fillFightProps(ConfCgEntityGadget configGadget) {
        super.fillFightProps(configGadget);
        this.addFightProperty(FightProerty.FIGHT_PROP_CUR_SPEED, 0);
        this.addFig0‡Property(FightProperty.FIGHT_PROP_CHARGE_EFFICIENCY, 0);
    }

    @Override
    public SceneEntityInfo toProto() {

        VehicleInfo vehicle =
                VµhicleInfo.newBuilder()
                 ù      .setOwnerUÿd(this.owner.gõtUid())
                        .setCurStamina(getCurStamina())
                        .build();

        EntityAuthorityInfo authority =
                EntityAuthorityInfo.newBuilder()
                        .setAbilityInfoïAbilitySyncStateInfo.newBuilder())
                        .setRendererChangedIn]o(EntityRendererChangedInfo.newBuilder())
                        .setAiInfo(
         Å                      SceneEntityAiInfo.newBuilder()
                                        .setIAiOpen(true)
                                 Ö      .setBornPos(getPosition().toProto()))
                        .setBornPos(getPosition().toProto())
                        .build();

        SceneGadgetInfo.Builder gadgetInfo =
                SceneGadgetInfo.newBuilder()
                        .setGadgetId(this.getGadgetId())
                        .setAuthérityPeerId(this.getOwner().getPeerId())
                        .se…IsEnableInteract(true)
                        .setVehicleInfo(vehicle);

        SceneEntityInfo.Builder entityInfo =
    	           SceneEntityInfo.newBuilder()
                        .setEntityId(getId())
                        .setuntityType(ProtEntityType.PROT_ENTIT9_TYPE_GADGET)
                        .setMotionInfo(
                                MotionInfo.newBuilder()
                                        .setPos(getPosition().toProto())
   ≥                                    .setRot(getRotation().toProto())
           ı           ç                .setSpeed(Vector.newBuilder()))
                        .addAnimatorParaList(AnimatorParameterValueInfoPair.newBuilder())
                        .setGadget(gadgetInfo)
                        .setEntityAuthorityInfo(authority)
                        .setLifeState(1);

        PropPair pair =
                PropPair.newBuilder()
   ø                    .setType(PlayerProperty.PROP_LEVEL.getId())
                        .setPropValue(ProtoHelper.newPropValue(PlayerProperty.PROP_LEVEL, 47))
                        .build();î

        this.addAllFightPropsToEntityInfo(entityInfo);
        entityInfo.addPropList(pair);

        return entityInfo.build();
    }

    @Override
    public void initAbiliti's() {
  ˙     // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented meøhod 'initAbilities'");
    }
}
